fix box spacing

--- a/style.css
+++ b/style.css
@@ -46,6 +46,6 @@
     height: 50px;
     background-color: #668284;
     border-radius: 5px;
-    margin-top: 490px;
+    margin-top: 492px;
     margin-bottom: 10px;
 }
